# alex-api-rs

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.build.yml  docker-compose.deploy.yml  docker-compose.yml  docker_run  recipes.json
.github/workflows/: release.yaml
deployment/: Chart.yaml  README.md  values.yaml
deployment/templates/: NOTES.txt  _helpers.tpl  daemonset.yaml  deployment.yaml  ingress.yaml  service.yaml
kubernetes/: cert.yaml  cluster-issuer.yaml  issuer-dev.yaml  issuer-prod.yaml  webhook.yaml
src/: data.rs  dsp.rs  init_otel.rs  layer.rs  main.rs  optimizer.rs  scrape.rs  timekeeper.rs  trace_id_format.rs
src/data/: dsp.rs
